<resources>
    <string name="app_name">FitForever</string>
    <string name="topBar0">FitForever</string>
    <string name="txtenterUN">ENTER USERNAME</string>
    <string name="edtUN">Enter username</string>
    <string name="btnstart">START</string>
    <string name="topBar1">WELCOME !!!</string>
    <string name="myprofilebtn">WEIGHT PLAN</string>
    <string name="mealplanbtn">MEAL PLAN</string>
    <string name="timetablebtn">PROGRESS PLAN</string>
    <string name="workoutbtn">WORKOUT PLAN</string>
    <string name="started_button_meal_plan">LETS GO!</string>
    <string name="proteinCalculator">Protein Calculator</string>
    <string name="AreYoLookingFor">Customize Your</string>
    <string name="MealPlansToCustomize">Meal Plans</string>
    <string name="SelectYour">Select Your</string>
    <string name="Category">Category</string>
    <string name="MealPlans">Meal Plans</string>
    <string name="button4_calorie">Diet Plan 1 - 1200 Calories </string>
    <string name="button6_calorie">Healthy Meal Plan</string>
    <string name="MealPlans2">Meal Plans</string>
    <string name="CalorieDietPlan1200">1200 Calorie Diet Plan</string>
    <string name="button_menu1">Menu 01</string>
    <string name="button_menu2">Menu 02</string>
    <string name="button_menu3">Menu 03</string>
    <string name="button_menu4">Menu 04</string>
    <string name="button_menu5">Menu 05</string>
    <string name="button_menu6">Menu 06</string>
    <string name="button_menu7">Menu 07</string>
    <string name="button_menu9">Menu 09</string>
    <string name="button_menu10">Menu 10</string>
    <string name="button_menu8">Menu 08</string>
    <string name="AddMenuToMealPlan">Add Menu To Meal Plan</string>
    <string name="MealPlanList">Meal Plan List</string>
    <string name="SelectMealPlan">Select Meal Plan </string>
    <string name="SelectMealPlanToAddMenu">Select Meal Plan To Add Menu</string>
    <string name="My_week1_plan">My week 1 plan</string>
    <string name="button_add_new_meal_plan">Add New Meal Plan</string>
    <string name="button_remove_meal_plan">Remove Meal Plan</string>
    <string name="button_edit_new_meal_plan">Edit New Meal Plan</string>
    <string name="Your_meal_plan">Your Meal Plan !</string>
    <string name="my_meal_plan">My Meal Plan List!</string>
    <string name="add_meal_plan">Add Meal Plan</string>
    <string name="meal_plan_name">Meal Plan Name</string>
    <string name="meal_plan_Name">Meal Plan Name</string>
    <string name="add_categorized_menus">Add Your Categorized Menus Here!</string>
    <string name="calorie_menus_1200">1200 Calorie Diet Plan Menus</string>
    <string name="healthy_plan_menu">Healthy Meal Plan Menus</string>
    <string name="Add_meal_plan2">Add Meal Plan</string>
    <string name="count_meal_plans">You have x Meal Plans !</string>
    <string name="add_meal_plan2">Add</string>
    <string name="description_for_meal_plan">Description</string>
    <string name="edit_meal_plan">Edit Meal Plan</string>
    <string name="MyPlanName">My Plan Name</string>
    <string name="My_meal_plan">My Meal Plan</string>
    <string name="DietPlanMenu1200">1200 Cal Diet Plan-></string>
    <string name="healthy_plan">Healthy Meal Plan-></string>
    <string name="what_should_i_eat">What Should I Eat !</string>
    <string name="edit_my_meal_plan">Edit My Meal Plan</string>
    <string name="menu__11">Breakfast (271 calories)</string>
    <string name="menu__12">1 serving Baked Banana-Nut Oatmeal Cups 1 medium apple</string>
    <string name="menu__13">A.M. Snack (35 calories)</string>
    <string name="menu__14">1 clementine</string>
    <string name="menu__15">Lunch (325 calories)</string>
    <string name="menu__16">

-<![CDATA[1 serving Veggie & Hummus Sandwich]]>
</string>
    <string name="menu__17">P.M. Snack (105 calories)</string>
    <string name="menu__18">1 medium banana</string>
    <string name="menu__19">Dinner (468 calories)</string>
    <string name="menu__20">1 serving Sheet-Pan Chicken Fajita Bowls with 1/2 cup cooked brown rice</string>
    <string name="menu__21">Daily Totals: 1,203 calories, 66 g protein, 177 g carbohydrate, 34 g fiber, 32 g fat, 1,186 mg sodium</string>
    <string name="menu__33">Breakfast (287 calories)</string>
    <string name="menu__34">1 serving Muesli with Raspberries</string>
    <string name="menu__35">A.M. Snack (35 calories)</string>
    <string name="menu__36">1 clementine</string>
    <string name="menu__37">Lunch (344 calories)</string>
    <string name="menu__38">1 serving Chipotle-Lime Cauliflower Taco Bowls</string>
    <string name="menu__39">P.M. Snack (32 calories)</string>
    <string name="menu__40">1/2 cup raspberries</string>
    <string name="menu__41">Dinner (521 calories)</string>
    <string name="menu__42">1 serving Chicken and Cucumber Lettuce Wraps with Peanut Sauce</string>
    <string name="menu__43">Daily Totals: 1,220 calories, 62 g protein, 159 g carbohydrate, 42 g fiber, 46 g fat, 1,109 mg sodium</string>
    <string name="click_here_to_add_plans">Click Here to Add Menus to Your plans!</string>
    <string name="menu__22">Breakfast </string>
    <string name="menu__23">3 Scrambled Eggs and 1 large grapefruit</string>
    <string name="menu__24">A.M. Snack </string>
    <string name="menu__25">25 almonds</string>
    <string name="menu__26">Lunch </string>
    <string name="menu__27">Turkey Wrap and 1 apple</string>
    <string name="menu__28">P.M. Snack </string>
    <string name="menu__29">1 piece of string cheese</string>
    <string name="menu__30">Dinner </string>
    <string name="menu__32">Spicy Chicken and Pasta, Side salad and 2 Tbsp olive oil/vinegar dressing.</string>
    <string name="menu__44">Daily Totals: 1980 calories</string>
    <string name="menu__45">Loaded Vegetable Omelet and 1 banana</string>
    <string name="menu__46">1 Luna Bar</string>
    <string name="menu__47">Black Bean and Cheese Burrito and 1 apple</string>
    <string name="menu__48">2 small boxes of raisins</string>
    <string name="menu__49">Grilled Cilantro-Lime Chicken and Salad with 2 Tbsp olive oil/vinegar dressing,1 sugar-free Fudgsicle</string>
    <string name="Your_LBM_val">Enter LBM</string>
    <string name="YourActivityType_pc">Select Activity Type </string>
    <string name="Calculate_protein">Daily Protein Need (Grams)</string>
    <string name="menu__h1">Breakfast (555 calories with 27 grams protein, 63 grams carbohydrates, and 23 grams fat)</string>
    <string name="menu__h2">Two poached eggs (or fried in a non-stick pan) </string>
    <string name="menu__h3">Two slices whole-grain toast with one pat of butter each</string>
    <string name="menu__h4">One cup low-fat milk </string>
    <string name="menu__h5">One cup of black coffee or herbal tea </string>
    <string name="menu__h6"> Snack (360 calories, 14 grams protein, 78 grams carbohydrates, 1 gram fat) </string>
    <string name="menu__h7">One banana </string>
    <string name="menu__h8">One cup plain yogurt with two tablespoons honey </string>
    <string name="menu__h9">Glass of water </string>
    <string name="menu__h10">Lunch (425 calories, 44 grams protein, 37 grams carbohydrates, 9 grams fat)</string>
    <string name="menu__h11">Chicken breast (6-ounce portion), baked or roasted (not breaded or fried)</string>
    <string name="menu__h12">Large garden salad with tomato and onion with one cup croutons, topped with one tablespoon oil and vinegar (or salad dressing) </string>
    <string name="menu__h13">Glass of water </string>
    <string name="menu__h14">Snack (157 calories, 6 grams protein, 25 grams carbohydrates, 5 grams fat)</string>
    <string name="menu__h15">One cup carrot slices </string>
    <string name="menu__h16">Three tablespoons hummus </string>
    <string name="menu__h17">One-half piece of pita bread </string>
    <string name="menu_h18">Glass of water or herbal tea </string>
    <string name="menu__h19">Dinner (646 calories, 42 grams protein, 77 grams carbohydrates, 8 grams fat)</string>
    <string name="menu__h20">One cup steamed broccoli </string>
    <string name="menu__h21">One cup of brown rice </string>
    <string name="menu__h22">Halibut (four-ounce portion) </string>
    <string name="menu__h23"> Small garden salad with one cup spinach leaves, tomato, and onion topped with two tablespoons oil and vinegar or salad dressing </string>
    <string name="menu__h24">One glass white wine (regular or dealcoholized) </string>
    <string name="menu__h25">Sparkling water with lemon or lime slice </string>
    <string name="menu__h26">Snack (100 calories, 1 gram protein, 22 grams carbohydrates, 2 grams fat)</string>
    <string name="menu__h27">One cup blueberries </string>
    <string name="menu__h28">Two tablespoons whipped cream (the real stuff—whip your own or buy in a can) </string>
    <string name="menu__h29">Glass of water </string>
    <string name="lms_table">Click Here For LBM Table</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="fat_cal_display">fat_cal_display</string>
    <string name="mSlectYourGender">Slect Your Gender </string>
    <string name="menu__50">Breakfast (285 calories) </string>
    <string name="menu__51">1 serving "Egg in a Hole" Peppers with Avocado Salsa </string>
    <string name="menu__52">Lunch (345 calories) </string>
    <string name="menu__53">1 serving Curried Sweet Potato and Peanut Soup</string>
    <string name="menu__54">P.M. Snack (220 calories) </string>
    <string name="menu__55">1 cup raspberries and 1 oz. dark chocolate </string>
    <string name="menu__56">Dinner (371 calories)</string>
    <string name="menu__57">1 serving Spinach and Artichoke Dip Pasta </string>
    <string name="menu__58">Daily Totals: 1,221 calories, 47 g protein, 139 g carbohydrate, 32 g fiber, 58 g fat, 1,741 mg sodium </string>
    <string name="menu__59"> Breakfast (287 calories) </string>
    <string name="menu__60"> 1 serving Muesli with Raspberries</string>
    <string name="menu__61"> A.M. Snack (95 calories)</string>
    <string name="menu__62">1 medium apple </string>
    <string name="menu__63">Lunch (325 calories) </string>
    <string name="menu__64">1 serving Veggie and Hummus Sandwich</string>
    <string name="menu__65">P.M. Snack (77 calories) </string>
    <string name="menu__66"> hard-boiled egg </string>
    <string name="menu__67">Dinner (405 calories) </string>
    <string name="menu__68">1 serving Curried Sweet Potato and Peanut Soup and 1 (1-in.) slice whole-wheat baguette </string>
    <string name="menu__69">Daily Totals: 1,190 calories, 47 g protein, 168 g carbohydrate, 38 g fiber, 46 g fat, 1,281 mg sodium </string>
    <string name="menu__70">Breakfast (271 calories) </string>
    <string name="menu__71">1 serving Baked Banana-Nut Oatmeal Cups and 1 medium apple </string>
    <string name="menu__72">A.M. Snack (70 calories) </string>
    <string name="menu__73"> 2 clementine </string>
    <string name="menu__74">Lunch (344 calories) </string>
    <string name="menu__75">1 serving Chipotle-Lime Cauliflower Taco Bowls</string>
    <string name="menu__76"> P.M. Snack (105 calories) </string>
    <string name="menu__77">1 medium banana</string>
    <string name="menu__78">Dinner (401 calories) </string>
    <string name="menu__79"> 1 serving Easy Salmon Cakes over 2 cups baby spinach </string>
    <string name="menu__80"> Daily Totals: 1,190 calories, 59 g protein, 176 g carbohydrate, 35 g fiber, 36 g fat, 1,534 mg sodium</string>
    <string name="menu__81">2 Tbsp of peanut butter with 1 piece of toast and 1 banana </string>
    <string name="menu__82">2 small boxes of raisins </string>
    <string name="menu__83">Leftover Spicy Chicken and Pasta </string>
    <string name="header01">Workout Plan</string>
    <string name="text_card01">FULLBODY</string>
    <string name="text_card02">BELLY</string>
    <string name="text_card03">LEGS</string>
</resources>