<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu5_1200">
    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="508dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/m3_textView95"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu__70"
            android:textColor="#0B0B0B"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/m_textView105"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu__71"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/m_textView255"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/m_textView115"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu__72"
            android:textColor="#0B0B0B"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/m_textView135"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu__73"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/m_textView265"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/m_textView165"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu__74"
            android:textColor="#0B0B0B"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/m_textView175"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu__75"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/m_textView275"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/m_textView185"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu__76"
            android:textColor="#0B0B0B"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/m_textView195"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu__77"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/m_textView285"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/m_textView205"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu__78"
            android:textColor="#0B0B0B"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/m_textView225"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu__79"

            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/m_textView235"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu__80"
            android:textColor="#0B0B0B"
            android:textSize="17sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/m_imageView_5"
        android:layout_width="255dp"
        android:layout_height="118dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu5_1200" />
</androidx.constraintlayout.widget.ConstraintLayout>