<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HealthyMenu1">
    <ScrollView
        android:layout_width="368dp"
        android:layout_height="530dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"


        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="508dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/m_textView59"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/m_textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h1"
                android:textColor="#0B0B0B"
                android:textSize="17sp" />
            <TextView
                android:id="@+id/m_textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/m_textView36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/m_textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/m_textView37"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h3"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/m_textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/m_textView38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h4"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/m_textView48"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/m_textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h5"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/m_textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/m_textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h6"
                android:textColor="#0B0B0B"
                android:textSize="17sp" />
            <TextView
                android:id="@+id/m_textView39"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/m_textView40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h7"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/m_textView50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/m_textView41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h8"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/m_textView55"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/m_textView42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h9"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/m_textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/m_textView44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h10"
                android:textSize="17sp"
                android:textColor="#0B0B0B"/>

            <TextView
                android:id="@+id/m_textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/m_textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h11"

                android:textSize="18sp" />
            <TextView
                android:id="@+id/m_textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/m_textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h12"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/m_textView45"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/m_textView46"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h13"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/m_textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/m_textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h14"
                android:textColor="#0B0B0B"
                android:textSize="17sp" />


            <TextView
                android:id="@+id/m_textView70"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/m_textView71"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h15"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/m_textView72"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/m_textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h16"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/m_textView73"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/m_textView52"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_h18"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/m_textView60"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/m_textView53"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h19"

                android:textColor="#0B0B0B"
                android:textSize="17sp"/>


            <TextView
                android:id="@+id/m_textView49"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/m_textView61"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h20"

                android:textSize="18sp" />

            <TextView
                android:id="@+id/m_textView51"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/m_textView62"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h21"

                android:textSize="18sp" />
            <TextView
                android:id="@+id/m_textView74"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/m_textView63"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h22"

                android:textSize="18sp" />
            <TextView
                android:id="@+id/m_textView75"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/m_textView64"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h23"

                android:textSize="18sp" />
            <TextView
                android:id="@+id/m_textView76"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/m_textView65"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h24"

                android:textSize="18sp" />
            <TextView
                android:id="@+id/m_textView77"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/m_textView66"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h25"

                android:textSize="18sp" />
            <TextView
                android:id="@+id/m_textView78"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/m_textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h26"

                android:textColor="#0B0B0B"
                android:textSize="17sp" />
            <TextView
                android:id="@+id/m_textView47"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/m_textView67"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h27"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/m_textView56"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/m_textView68"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h28"

                android:textSize="18sp" />


            <TextView
                android:id="@+id/m_textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/m_textView69"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu__h29"

                android:textSize="18sp" />




        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/mimageView"

        android:layout_width="255dp"
        android:layout_height="118dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/healthym1" />
</androidx.constraintlayout.widget.ConstraintLayout>